--- a/src/main/webapp/protegido/principal.xhtml
+++ b/src/main/webapp/protegido/principal.xhtml
@@ -8,7 +8,7 @@
         <ui:composition template="./../WEB-INF/template/plantilla.xhtml">
 
             <ui:define name="content">
-                Hola Usuario
+                Hola Usuario: #{menuController.mostrarUsuario()}
             </ui:define>
 
         </ui:composition>
