--- a/src/main/webapp/protegido/operario/telefono.xhtml
+++ b/src/main/webapp/protegido/operario/telefono.xhtml
@@ -12,15 +12,13 @@
             <ui:define name="content">
                 <h1>Telfono</h1>
                 <h:form id="formPrincipal">
-                    <p:commandButton icon="ui-icon-plusthick" value="Nuevo" onclick="PF('wdialogo').show();"/>
+                    <p:commandButton icon="ui-icon-plusthick" value="Nuevo" onclick="PF('wdialogo').show();" actionListener="#{telefonoController.setFlagAccion('Nuevo')}" update=":formDialog"/>
                     <p></p>
-                    <p:dataTable id="tabla" value="#{telefonoController.telefonos}" emptyMessage="No se encontraron Registros" var="tel" paginator="true" rows="4">
+                    <p:dataTable  id="tabla" value="#{telefonoController.telefonos}" emptyMessage="No se encontraron Registros" var="tel" paginator="true" rows="4">
                         <p:column headerText="" resizable="true">
-                            <h:commandLink action="Editar"  >
-                                <h:graphicImage id="puntuar" library="image" name="lapiz.png">
-                                    <p:tooltip for="puntuar" value="Editar registros"/>   
-                                </h:graphicImage>
-                            </h:commandLink>
+                            <p:commandLink value="Editar" actionListener="#{telefonoController.leer(tel)}" oncomplete="PF('wdialogo').show();" update="dialog"  >
+                               
+                            </p:commandLink>
                         </p:column>
                         <p:column headerText="Codigo">
                             <h:outputText value="#{tel.codigo}"/>
@@ -36,12 +34,13 @@
                     </p:dataTable>
                 </h:form>
 
-                <p:dialog id="dialog" widgetVar="wdialogo" header="Nuevo Telefono" modal="true" resizable="false" closeOnEscape="true" draggable="false">
-                    <h:form>
+                <p:dialog id="dialog" widgetVar="wdialogo" header="Nuevo Telefono" modal="true" resizable="false" closeOnEscape="true" draggable="false"  >
+                    <h:form id="formDialog">
                         <h:panelGrid columns="2">
                             <p:outputLabel for="txtNumero" value="Numero"/>
                             <p:inputMask id="txtNumero"  mask="9?999999999" slotChar="" required="true" value="#{telefonoController.telefono.numero}"/>
-                            <p:commandButton value="Registrar" icon="ui-icon-check" update=":formPrincipal:tabla" actionListener="#{telefonoController.registrar()}" oncomplete="PF('wdialogo').hidde();" />
+                            <p:commandButton value="Registrar" icon="ui-icon-check" update=":formPrincipal:tabla" actionListener="#{telefonoController.registrar()}" oncomplete="PF('wdialogo').hidde();" rendered="#{telefonoController.flagAccion == 'Nuevo'}"/>
+                             <p:commandButton value="Actualizar" icon="ui-icon-check" update=":formPrincipal:tabla" actionListener="#{telefonoController.registrar()}" oncomplete="PF('wdialogo').hidde();" rendered="#{telefonoController.flagAccion == 'Actualizar'}" />
                             <p:commandButton value="Cancelar" icon="ui-icon-close" immediate="true" onclick="PF('wdialogo').hidde();"/>
                         </h:panelGrid> 
                     </h:form>
